ops/k8s/api-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aegisrun-api-canary
  namespace: aegisrun
  labels:
    app.kubernetes.io/name: aegisrun
    app.kubernetes.io/component: api
    app.kubernetes.io/variant: canary
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: aegisrun
    app.kubernetes.io/component: api
    app.kubernetes.io/variant: canary
